assignment3/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from /home/quangngcs/Desktop/Github/PPL/assignment3/src/main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'integer'", "'float'", "'string'", "'boolean'", 
                     "'array'", "'auto'", "'of'", "'inherit'", "'out'", 
                     "'void'", "'return'", "'function'", "'if'", "'else'", 
                     "'while'", "'for'", "'do'", "'break'", "'continue'", 
                     "'+'", "'-'", "'/'", "'*'", "'%'", "'!='", "'=='", 
                     "'&&'", "'||'", "'!'", "'<'", "'<='", "'>'", "'>='", 
                     "'::'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'='", 
                     "':'", "','", "';'", "'.'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "INTEGER", "FLOAT", "STRING", "BOOLEAN", 
                      "ARRAY", "AUTO", "OF", "INHERIT", "OUT", "VOID", "RETURN", 
                      "FUNCTION", "IF", "ELSE", "WHILE", "FOR", "DO", "BREAK", 
                      "CONTINUE", "ADD", "SUBSTRACT", "DIVIDE", "MULTIPLY", 
                      "MODULO", "NOTEQUAL", "EQUAL", "AND", "OR", "NOT", 
                      "LESS", "LEQ", "GREATER", "GEQ", "STRING_CONCAT", 
                      "LEFT_PARENTHESIS", "RIGHT_PARENTHESIS", "LEFT_SQUARE_BRACKET", 
                      "RIGHT_SQUARE_BRACKET", "LEFT_CURLY_BRACKET", "RIGHT_CURLY_BRACKET", 
                      "ASSIGN", "COLON", "COMMA", "SEMI", "DOT", "TRUE", 
                      "FALSE", "INTLIT", "FLOATLIT", "STRINGLIT", "IDENTIFIERS", 
                      "WS", "BLOCKCOMMENT", "INLINECOMMENT", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_atomic_type = 2
    RULE_function_type = 3
    RULE_include_auto_type = 4
    RULE_vardecl = 5
    RULE_full_format_decl = 6
    RULE_list_of_ids = 7
    RULE_another_id_list = 8
    RULE_array_type = 9
    RULE_dimensions = 10
    RULE_array_literal = 11
    RULE_expr_list = 12
    RULE_list_of_exprs = 13
    RULE_array_indexing = 14
    RULE_indexop_expr = 15
    RULE_funcdecl = 16
    RULE_function_prototype = 17
    RULE_function_body = 18
    RULE_func_params = 19
    RULE_paramlist = 20
    RULE_paramone = 21
    RULE_function_call = 22
    RULE_arg_list = 23
    RULE_arg_list_params = 24
    RULE_literal = 25
    RULE_sub_expr = 26
    RULE_expr = 27
    RULE_expr1 = 28
    RULE_expr2 = 29
    RULE_expr3 = 30
    RULE_expr4 = 31
    RULE_expr5 = 32
    RULE_expr6 = 33
    RULE_expr7 = 34
    RULE_stmt = 35
    RULE_noblock_statement = 36
    RULE_assign_statement = 37
    RULE_if_statement = 38
    RULE_for_statement = 39
    RULE_while_statement = 40
    RULE_do_while_statement = 41
    RULE_break_statement = 42
    RULE_continue_statement = 43
    RULE_return_statement = 44
    RULE_call_statement = 45
    RULE_block_statement = 46
    RULE_in_block_body = 47

    ruleNames =  [ "program", "decl", "atomic_type", "function_type", "include_auto_type", 
                   "vardecl", "full_format_decl", "list_of_ids", "another_id_list", 
                   "array_type", "dimensions", "array_literal", "expr_list", 
                   "list_of_exprs", "array_indexing", "indexop_expr", "funcdecl", 
                   "function_prototype", "function_body", "func_params", 
                   "paramlist", "paramone", "function_call", "arg_list", 
                   "arg_list_params", "literal", "sub_expr", "expr", "expr1", 
                   "expr2", "expr3", "expr4", "expr5", "expr6", "expr7", 
                   "stmt", "noblock_statement", "assign_statement", "if_statement", 
                   "for_statement", "while_statement", "do_while_statement", 
                   "break_statement", "continue_statement", "return_statement", 
                   "call_statement", "block_statement", "in_block_body" ]

    EOF = Token.EOF
    INTEGER=1
    FLOAT=2
    STRING=3
    BOOLEAN=4
    ARRAY=5
    AUTO=6
    OF=7
    INHERIT=8
    OUT=9
    VOID=10
    RETURN=11
    FUNCTION=12
    IF=13
    ELSE=14
    WHILE=15
    FOR=16
    DO=17
    BREAK=18
    CONTINUE=19
    ADD=20
    SUBSTRACT=21
    DIVIDE=22
    MULTIPLY=23
    MODULO=24
    NOTEQUAL=25
    EQUAL=26
    AND=27
    OR=28
    NOT=29
    LESS=30
    LEQ=31
    GREATER=32
    GEQ=33
    STRING_CONCAT=34
    LEFT_PARENTHESIS=35
    RIGHT_PARENTHESIS=36
    LEFT_SQUARE_BRACKET=37
    RIGHT_SQUARE_BRACKET=38
    LEFT_CURLY_BRACKET=39
    RIGHT_CURLY_BRACKET=40
    ASSIGN=41
    COLON=42
    COMMA=43
    SEMI=44
    DOT=45
    TRUE=46
    FALSE=47
    INTLIT=48
    FLOATLIT=49
    STRINGLIT=50
    IDENTIFIERS=51
    WS=52
    BLOCKCOMMENT=53
    INLINECOMMENT=54
    ILLEGAL_ESCAPE=55
    UNCLOSE_STRING=56
    ERROR_CHAR=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.decl()
            self.state = 97
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 99
                    self.vardecl()
                    pass

                elif la_ == 2:
                    self.state = 100
                    self.funcdecl()
                    pass


                self.state = 103
                self.decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 105
                    self.vardecl()
                    pass

                elif la_ == 2:
                    self.state = 106
                    self.funcdecl()
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atomic_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomic_type




    def atomic_type(self):

        localctx = MT22Parser.Atomic_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_atomic_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INTEGER) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.STRING) | (1 << MT22Parser.BOOLEAN))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_function_type




    def function_type(self):

        localctx = MT22Parser.Function_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_type)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.match(MT22Parser.BOOLEAN)
                pass
            elif token in [MT22Parser.INTEGER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(MT22Parser.INTEGER)
                pass
            elif token in [MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.match(MT22Parser.FLOAT)
                pass
            elif token in [MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.match(MT22Parser.STRING)
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 5)
                self.state = 117
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.VOID]:
                self.enterOuterAlt(localctx, 6)
                self.state = 118
                self.match(MT22Parser.VOID)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 7)
                self.state = 119
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Include_auto_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_include_auto_type




    def include_auto_type(self):

        localctx = MT22Parser.Include_auto_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_include_auto_type)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(MT22Parser.BOOLEAN)
                pass
            elif token in [MT22Parser.INTEGER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(MT22Parser.INTEGER)
                pass
            elif token in [MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.match(MT22Parser.FLOAT)
                pass
            elif token in [MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 125
                self.match(MT22Parser.STRING)
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 5)
                self.state = 126
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 6)
                self.state = 127
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_of_ids(self):
            return self.getTypedRuleContext(MT22Parser.List_of_idsContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def include_auto_type(self):
            return self.getTypedRuleContext(MT22Parser.Include_auto_typeContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def full_format_decl(self):
            return self.getTypedRuleContext(MT22Parser.Full_format_declContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.list_of_ids()
                self.state = 131
                self.match(MT22Parser.COLON)
                self.state = 132
                self.include_auto_type()
                self.state = 133
                self.match(MT22Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.full_format_decl()
                self.state = 136
                self.match(MT22Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Full_format_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIERS(self):
            return self.getToken(MT22Parser.IDENTIFIERS, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def full_format_decl(self):
            return self.getTypedRuleContext(MT22Parser.Full_format_declContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def include_auto_type(self):
            return self.getTypedRuleContext(MT22Parser.Include_auto_typeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_full_format_decl




    def full_format_decl(self):

        localctx = MT22Parser.Full_format_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_full_format_decl)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.match(MT22Parser.IDENTIFIERS)
                self.state = 141
                self.match(MT22Parser.COMMA)
                self.state = 142
                self.full_format_decl()
                self.state = 143
                self.match(MT22Parser.COMMA)
                self.state = 144
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.match(MT22Parser.IDENTIFIERS)
                self.state = 147
                self.match(MT22Parser.COLON)
                self.state = 148
                self.include_auto_type()
                self.state = 149
                self.match(MT22Parser.ASSIGN)
                self.state = 150
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_of_idsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIERS(self):
            return self.getToken(MT22Parser.IDENTIFIERS, 0)

        def another_id_list(self):
            return self.getTypedRuleContext(MT22Parser.Another_id_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_list_of_ids




    def list_of_ids(self):

        localctx = MT22Parser.List_of_idsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_list_of_ids)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(MT22Parser.IDENTIFIERS)
                self.state = 155
                self.another_id_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(MT22Parser.IDENTIFIERS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Another_id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def list_of_ids(self):
            return self.getTypedRuleContext(MT22Parser.List_of_idsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_another_id_list




    def another_id_list(self):

        localctx = MT22Parser.Another_id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_another_id_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(MT22Parser.COMMA)
            self.state = 160
            self.list_of_ids()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LEFT_SQUARE_BRACKET(self):
            return self.getToken(MT22Parser.LEFT_SQUARE_BRACKET, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def RIGHT_SQUARE_BRACKET(self):
            return self.getToken(MT22Parser.RIGHT_SQUARE_BRACKET, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array_type




    def array_type(self):

        localctx = MT22Parser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(MT22Parser.ARRAY)
            self.state = 163
            self.match(MT22Parser.LEFT_SQUARE_BRACKET)
            self.state = 164
            self.dimensions()
            self.state = 165
            self.match(MT22Parser.RIGHT_SQUARE_BRACKET)
            self.state = 166
            self.match(MT22Parser.OF)
            self.state = 167
            self.atomic_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimensions




    def dimensions(self):

        localctx = MT22Parser.DimensionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_dimensions)
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.match(MT22Parser.INTLIT)
                self.state = 170
                self.match(MT22Parser.COMMA)
                self.state = 171
                self.dimensions()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.match(MT22Parser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_literalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_CURLY_BRACKET(self):
            return self.getToken(MT22Parser.LEFT_CURLY_BRACKET, 0)

        def expr_list(self):
            return self.getTypedRuleContext(MT22Parser.Expr_listContext,0)


        def RIGHT_CURLY_BRACKET(self):
            return self.getToken(MT22Parser.RIGHT_CURLY_BRACKET, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_array_literal




    def array_literal(self):
